--- a/Pro1-traversing methods.html
+++ b/Pro1-traversing methods.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DOM traversing method</title>
+    <link rel="stylesheet" href="css/Pro1-traversing methods.css">
 </head>
+
 <body>
-    
+
+    <div id="outer">
+
+        <h3>Hello</h3>
+        <div id="inner">
+            <div>A</div>
+            <div id="b">B</div>
+            <div>C</div>
+            <div>D</div>
+            <div>E</div>
+        </div>
+    </div>
+    <!-- <script src="js/Pro1-traversing methods.js"></script> -->
+    <!-- <script src="js/pro2-child and children.js"></script> -->
+    <!-- <script src="js/pro3-firstChild and lastChild.js"></script> -->
+    <script src="js/pro4-nextSibling and previous sibling.js"></script>
 </body>
+
 </html>
